mengubah tulisan home menjadi main

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </button>
       <nav class="main-nav unified-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#home">Home</a></li>
+          <li><a class="main-nav-link" href="#home">Main</a></li>
           <li><a class="main-nav-link" href="#footer">Contact</a></li>
           <li>
             <a href="#home">
